Host/Source/LibOpenBLT/port/windows/canif/kvaser/canlib.h


typedef int canHandle;
canStatus CANLIBAPI canClose(const CanHandle hnd);
canStatus CANLIBAPI canBusOn(const CanHandle hnd);
canStatus CANLIBAPI canBusOff(const CanHandle hnd);
canStatus CANLIBAPI canSetBusParams(const CanHandle hnd,
                                    long freq,
                                    unsigned int tseg1,
                                    unsigned int tseg2,
                                    unsigned int sjw,
                                    unsigned int noSamp,
                                    unsigned int syncmode);
canStatus CANLIBAPI canSetBusParamsFd(const CanHandle hnd,
                                      long freq_brs,
                                      unsigned int tseg1_brs,
                                      unsigned int tseg2_brs,
                                      unsigned int sjw_brs);
canStatus CANLIBAPI canGetBusParams(const CanHandle hnd,
                                    long  *freq,
                                    unsigned int *tseg1,
                                    unsigned int *tseg2,
                                    unsigned int *sjw,
                                    unsigned int *noSamp,
                                    unsigned int *syncmode);
canStatus CANLIBAPI canGetBusParamsFd(const CanHandle hnd,
                                      long  *freq_brs,
                                      unsigned int *tseg1_brs,
                                      unsigned int *tseg2_brs,
                                      unsigned int *sjw_brs);
canStatus CANLIBAPI canSetBusOutputControl(const CanHandle hnd,
                                           const unsigned int drivertype);
canStatus CANLIBAPI canGetBusOutputControl(const CanHandle hnd,
                                           unsigned int *drivertype);
canStatus CANLIBAPI canAccept(const CanHandle hnd,
                              const long envelope,
                              const unsigned int flag);
canStatus CANLIBAPI canReadStatus(const CanHandle hnd,
                                  unsigned long *const flags);
canStatus CANLIBAPI canReadErrorCounters(const CanHandle hnd,
                                         unsigned int *txErr,
                                         unsigned int *rxErr,
                                         unsigned int *ovErr);
canStatus CANLIBAPI canWrite(const CanHandle hnd,
                             long id,
                             void *msg,
                             unsigned int dlc,
                             unsigned int flag);
canStatus CANLIBAPI canWriteSync(const CanHandle hnd, unsigned long timeout);
canStatus CANLIBAPI canRead(const CanHandle hnd,
                            long *id,
                            void *msg,
                            unsigned int *dlc,
                            unsigned int *flag,
                            unsigned long *time);
canStatus CANLIBAPI canReadWait(const CanHandle hnd,
                                long *id,
                                void *msg,
                                unsigned int  *dlc,
                                unsigned int  *flag,
                                unsigned long *time,
                                unsigned long timeout);
canStatus CANLIBAPI canReadSpecific(const CanHandle hnd, long id, void *msg,
                                    unsigned int *dlc, unsigned int *flag,
                                    unsigned long *time);
canStatus CANLIBAPI canReadSync(const CanHandle hnd, unsigned long timeout);
canStatus CANLIBAPI canReadSyncSpecific(const CanHandle hnd,
                                        long id,
                                        unsigned long timeout);
canStatus CANLIBAPI canReadSpecificSkip(const CanHandle hnd,
                                        long id,
                                        void *msg,
                                        unsigned int *dlc,
                                        unsigned int *flag,
                                        unsigned long *time);
canStatus CANLIBAPI canSetNotify(const CanHandle hnd,
                                 HWND aHWnd,
                                 unsigned int aNotifyFlags);
canStatus CANLIBAPI canTranslateBaud(long *const freq,
                                     unsigned int *const tseg1,
                                     unsigned int *const tseg2,
                                     unsigned int *const sjw,
                                     unsigned int *const nosamp,
                                     unsigned int *const syncMode);
canStatus CANLIBAPI canGetErrorText(canStatus err, char *buf, unsigned int bufsiz);
unsigned short CANLIBAPI canGetVersion(void);
canStatus CANLIBAPI canIoCtl(const CanHandle hnd,
                             unsigned int func,
                             void *buf,
                             unsigned int buflen);
unsigned long CANLIBAPI canReadTimer(const CanHandle hnd);
CanHandle CANLIBAPI canOpenChannel(int channel, int flags);
canStatus CANLIBAPI canGetNumberOfChannels(int *channelCount);
canStatus CANLIBAPI canGetChannelData(int channel,
                                      int item,
                                      void *buffer,
                                      size_t bufsize);
canStatus CANLIBAPI canWaitForEvent(const CanHandle hnd, DWORD timeout);
canStatus CANLIBAPI canSetBusParamsC200(const CanHandle hnd, unsigned char btr0, unsigned char btr1);
canStatus CANLIBAPI canSetDriverMode(const CanHandle hnd, int lineMode, int resNet);
canStatus CANLIBAPI canGetDriverMode(const CanHandle hnd, int *lineMode, int *resNet);
unsigned int CANLIBAPI canGetVersionEx(unsigned int itemCode);
canStatus CANLIBAPI canParamGetCount(void);
canStatus CANLIBAPI canParamCommitChanges(void);
canStatus CANLIBAPI canParamDeleteEntry(int index);
canStatus CANLIBAPI canParamCreateNewEntry(void);
canStatus CANLIBAPI canParamSwapEntries(int index1, int index2);
canStatus CANLIBAPI canParamGetName(int index, char *buffer, int maxlen);
canStatus CANLIBAPI canParamGetChannelNumber(int index);
canStatus CANLIBAPI canParamGetBusParams(int index,
                                         long *bitrate,
                                         unsigned int *tseg1,
                                         unsigned int *tseg2,
                                         unsigned int *sjw,
                                         unsigned int *noSamp);
canStatus CANLIBAPI canParamSetName(int index, const char *buffer);
canStatus CANLIBAPI canParamSetChannelNumber(int index, int channel);
canStatus CANLIBAPI canParamSetBusParams(int index,
                                         long bitrate,
                                         unsigned int tseg1,
                                         unsigned int tseg2,
                                         unsigned int sjw,
                                         unsigned int noSamp);
canStatus CANLIBAPI canParamFindByName(const char *name);
canStatus CANLIBAPI canObjBufFreeAll(const CanHandle hnd);
canStatus CANLIBAPI canObjBufAllocate(const CanHandle hnd, int type);
canStatus CANLIBAPI canObjBufFree(const CanHandle hnd, int idx);
canStatus CANLIBAPI canObjBufWrite(const CanHandle hnd,
                                   int idx,
                                   int id,
                                   void *msg,
                                   unsigned int dlc,
                                   unsigned int flags);
canStatus CANLIBAPI canObjBufSetFilter(const CanHandle hnd,
                                       int idx,
                                       unsigned int code,
                                       unsigned int mask);
canStatus CANLIBAPI canObjBufSetFlags(const CanHandle hnd,
                                      int idx,
                                      unsigned int flags);
canStatus CANLIBAPI canObjBufSetPeriod(const CanHandle hnd,
                                       int idx,
                                       unsigned int period);
canStatus CANLIBAPI canObjBufSetMsgCount(const CanHandle hnd,
                                         int idx,
                                         unsigned int count);
canStatus CANLIBAPI canObjBufEnable(const CanHandle hnd, int idx);
canStatus CANLIBAPI canObjBufDisable(const CanHandle hnd, int idx);
canStatus CANLIBAPI canObjBufSendBurst(const CanHandle hnd,
                                       int idx,
                                       unsigned int burstlen);
BOOL CANLIBAPI canProbeVersion (const CanHandle hnd,
                                int major,
                                int minor,
                                int oem_id,
                                unsigned int flags);
canStatus CANLIBAPI canResetBus(const CanHandle hnd);
canStatus CANLIBAPI canWriteWait(const CanHandle hnd,
                                 long id,
                                 void *msg,
                                 unsigned int dlc,
                                 unsigned int flag,
                                 unsigned long timeout);
canStatus CANLIBAPI canSetAcceptanceFilter(const CanHandle hnd,
                                           unsigned int code,
                                           unsigned int mask,
                                           int is_extended);
canStatus CANLIBAPI canFlushReceiveQueue(const CanHandle hnd);
canStatus CANLIBAPI canFlushTransmitQueue(const CanHandle hnd);
canStatus CANLIBAPI kvGetApplicationMapping(int busType,
                                            char *appName,
                                            int appChannel,
                                            int *resultingChannel);
canStatus CANLIBAPI kvBeep(const CanHandle hnd,
                           int freq,
                           unsigned int duration);
canStatus CANLIBAPI kvSelfTest(const CanHandle hnd, unsigned long *presults);
canStatus CANLIBAPI kvFlashLeds (const CanHandle hnd, int action, int timeout);
canStatus CANLIBAPI canRequestChipStatus(const CanHandle hnd);
canStatus CANLIBAPI canRequestBusStatistics (const CanHandle hnd);
typedef struct canBusStatistics_s {
    unsigned long stdData;   
    unsigned long stdRemote; 
    unsigned long extData;   
    unsigned long extRemote; 
    unsigned long errFrame;  
    unsigned long busLoad;
    unsigned long overruns;  
} canBusStatistics;
canStatus CANLIBAPI canGetBusStatistics(const CanHandle hnd,
                                        canBusStatistics *stat,
                                        size_t bufsiz);
canStatus CANLIBAPI canSetBitrate(const CanHandle hnd, int bitrate);
canStatus CANLIBAPI kvAnnounceIdentity(const CanHandle hnd,
                                       void *buf,
                                       size_t bufsiz);
canStatus CANLIBAPI kvAnnounceIdentityEx(const CanHandle hnd,
                                         int type,
                                         void *buf,
                                         size_t bufsiz);
canStatus CANLIBAPI canGetHandleData(const CanHandle hnd,
                                     int item,
                                     void *buffer,
                                     size_t bufsize);
typedef void *kvTimeDomain;
typedef canStatus kvStatus;
typedef struct kvTimeDomainData_s {
    int nMagiSyncGroups;       
    int nMagiSyncedMembers;    
    int nNonMagiSyncCards;     
    int nNonMagiSyncedMembers; 
} kvTimeDomainData;
kvStatus CANLIBAPI kvTimeDomainCreate(kvTimeDomain *domain);
kvStatus CANLIBAPI kvTimeDomainDelete(kvTimeDomain domain);
kvStatus CANLIBAPI kvTimeDomainResetTime(kvTimeDomain domain);
kvStatus CANLIBAPI kvTimeDomainGetData(kvTimeDomain domain,
                                       kvTimeDomainData *data,
                                       size_t bufsiz);
kvStatus CANLIBAPI kvTimeDomainAddHandle(kvTimeDomain domain,
                                         const CanHandle hnd);
kvStatus CANLIBAPI kvTimeDomainRemoveHandle(kvTimeDomain domain,
                                            const CanHandle hnd);
typedef void(__stdcall *kvCallback_t)(CanHandle hnd, void *context, unsigned int notifyEvent);
kvStatus CANLIBAPI kvSetNotifyCallback(const CanHandle hnd,
                                       kvCallback_t callback,
                                       void *context,
                                       unsigned int notifyFlags);
kvStatus CANLIBAPI kvGetSupportedInterfaceInfo(int index,
                                               char *hwName,
                                               size_t nameLen,
                                               int *hwType,
                                               int *hwBusType);
kvStatus CANLIBAPI kvReadDeviceCustomerData(const CanHandle hnd,
                                            int userNumber,
                                            int itemNumber,
                                            void *data,
                                            size_t bufsiz);
typedef __int64 kvEnvHandle;
kvStatus CANLIBAPI kvScriptStart(const CanHandle hnd, int slotNo);
kvStatus CANLIBAPI kvScriptStop(const CanHandle hnd, int slotNo, int mode);
kvStatus CANLIBAPI kvScriptUnload(const CanHandle hnd, int slotNo);
kvStatus CANLIBAPI kvScriptSendEvent(const CanHandle hnd,
                                     int slotNo,
                                     int eventType,
                                     int eventNo,
                                     unsigned int data);
kvEnvHandle CANLIBAPI kvScriptEnvvarOpen(const CanHandle hnd,
                                         const char *envvarName,
                                         int *envvarType,
                                         int *envvarSize); 
kvStatus CANLIBAPI kvScriptStatus(const CanHandle hnd,
                                  int  slot,
                                  unsigned int *status);
kvStatus CANLIBAPI kvReadTimer(const CanHandle hnd, unsigned int *time);
kvStatus CANLIBAPI kvReadTimer64(const CanHandle hnd, KVINT64 *time);